Make sure table does not overlap next title

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -47,5 +47,9 @@ $path: "/public/images/";
       background-color: #333;
     }
   }
+
+  table {
+    margin-bottom: 40px;
+  }
 }
 
